the agreement page for google ui

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,5 +144,15 @@ form#one input {
     width: 50px;
 }
 
+.trial{
+    overflow-y: scroll;
+    max-height: 250px;
+}
+
+.float{
+    position: absolute;
+    left: 320px;
+}
+
 
   
